progress: upload monitoring module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
     "dismissable",
     "dtos",
     "ILIKE",
+    "inputnumber",
+    "inputtext",
+    "inputtextarea",
+    "integeronly",
     "mergepermissions",
     "Pereira",
     "postgres",
