--- a/monitoring-backend/package.json
+++ b/monitoring-backend/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "csv": "^6.3.8",
+    "date-fns": "^3.6.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
