--- a/monitoring-frontend/package.json
+++ b/monitoring-frontend/package.json
@@ -25,6 +25,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
